--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <title>Index</title>
+    <title>Browser Sync Demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--link href="css/bootstrap.min.css" rel="stylesheet"-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.min.js" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
@@ -36,10 +35,6 @@
                         <li><a href="page2">Page 2</a></li> 
                         <li><a href="page3">Page 3</a></li> 
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href=""><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                        <li><a href=""><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                  </ul>
                 </div>
             </div>
         </nav>
@@ -48,15 +43,15 @@
         <div class="container" ng-view></div>
         <div class="pageLoading" ng-show="pageLoading"></div>
     </div>
-    <footer></footer>
+    <footer>
+        <div class="footerText">Powered by Gulp</div>
+    </footer>
 
     <script type="text/javascript" src="node_modules/angular/angular.js"></script>
     <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
     <script src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="node_modules/angular-webstorage/dist/angular-webstorage.min.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="node_modules/angular-ui-bootstrap/ui-bootstrap.min.js"></script>
     <script type="text/javascript" src="node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>  
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
